# realsense-pointcloud

./: .gitignore  CMakeLists.txt  README.md
PCDFileVisualization/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pcdVisualization.cpp
capture/: README.md  capture.cpp
examples/: .gitignore
examples/capture/: CMakeLists.txt  capture.cpp
examples/visualizer/: .gitignore  CMakeLists.txt  cloudViewer.cpp  exampleTemp.pcd  pcdVisualization.cpp
slam/: .gitignore  CMakeLists.txt  FBRegistration.cpp  FBRegistration.hpp  main.cpp  ndt  ndt.cpp  slam.cbp  utils.hpp  visualize_pcd.cpp
src/: .gitignore  CMakeLists.txt  blur_filter.hpp  capture.hpp  capture_opencv.hpp  capture_with_motion.hpp  edge_based_registration.hpp  edge_extractor.hpp  fb_registration_scheme.hpp  file_name_format.hpp  icp_edge_based_registration.hpp  incremental_icp.hpp  main.cpp  ndt.cpp  ndt.hpp  ndtTemp.cpp  ndt_edge_based_registration.hpp  pairwise_icp.hpp  rgbn_registration_scheme.hpp  rotation_estimator.hpp  translation_estimator.hpp  types.hpp  utils.hpp  visualizer.hpp
src/filters/: edge_filter.hpp
